# syntax-hi-lib

./: CMakeLists.txt  README.md
lib/: abstracthighlighter.h  ansihighlighter.cpp  ansihighlighter.h  definition.h  definitiondownloader.cpp  definitiondownloader.h  downloader.cpp  downloader.h  foldingregion.h  format.h  highlightingdata.cpp  htmlhighlighter.h  index.cpp  index.h  ksyntaxhighlighting_logging.h  ksyntaxhighlighting_version.h  libpaths.h  repository.cpp  repository.h  state.h  syntaxhighlighter.h  theme.h  wildcardmatcher.h
